changes in main.scss

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,6 @@
 @import 'plug/fonts';
-@import 'plug/mixins';
 @import 'plug/rem';
-@import 'plug/sprite';
+// @import 'plug/sprite';
 @import 'plug/variables';
 @import 'plug/grid/smart-grid.scss';
 
