global-change-tasks

--- a/src/sass/plug/_variables.scss
+++ b/src/sass/plug/_variables.scss
@@ -1,6 +1,5 @@
-$color_accent: red;
+$primary-color: lightgray;
 
-%border {
-	box-shadow: 1px 1px 5px rgba(0,0,0, .5);
-	border: 1px solid $color_accent;
+%general {
+	background-color: white;
 }
