--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,43 +1,31 @@
 @import 'plug/fonts';
 @import 'plug/rem';
-// @import 'plug/sprite';
 @import 'plug/variables';
-@import 'plug/grid/smart-grid.scss';
+@import 'plug/media-queries';
+@import 'template/header';
+@import 'template/footer';
 
 /* Global styles start*/
 html {
-	@include reset();
 	font-family: 'Jura', sans-serif;
 }
-.header, .footer, p, h1 {
-	font-size: rem(25px);
-	color: lighten($color_accent, 25%);
-	font-style: italic;
-	text-align: center;
-}
-.container {
-	@include wrapper();
-}
-.items{
-	@include row-flex();
-	justify-content: center;
-	.item{
-		padding-top: 1rem;
-		padding-bottom: 1rem;
-		@include col();
-		@include size(5);
-		@include size-md(6);
-		@include size-sm(15);
-	}
-}
-@include lg-block() {
-	html {
-		font-size: 90%;
-	}
-};
-@include sm-block() {
-	html {
-		font-size: 70%;
-	}
-}
 /* Global styles end*/
+.wrap {
+	display: flex;
+}
+.expample {
+	background-color: red;
+	height: 50px;
+	margin: 0 1rem;
+
+	@include xl-up() {
+		width: 20%;
+	}
+	@include xl-down() {
+		width: 20%;
+	}
+	button {
+		margin: .8rem auto;
+		display: block;
+	}
+}
