--- a/src/sass/libs.scss
+++ b/src/sass/libs.scss
@@ -1,1 +1,2 @@
-@import '../../node_modules/normalize-scss/sass/normalize/import-now'
+@import 'plug/variables';
+@import '../../node_modules/bootstrap-reboot/bootstrap-reboot.scss';
