--- a/src/sass/plug/_variables.scss
+++ b/src/sass/plug/_variables.scss
@@ -5,7 +5,7 @@ $body-color                : black;
 $body-bg                   : white;
 
 $line-height-base          : 1.5;
-$font-size-base            : 16px;
+$font-size-base            : 1rem;
 $text-muted                : #dedede;
 $font-weight-base          : normal;
 $paragraph-margin-bottom   : 0;
