--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,3 +1,6 @@
-<header class="header">
-	<p>header</p>
-</header>
+<div class="page-wrapper">
+	<div class="page-content">
+		<header class="header">
+			<p style="font-size: 2rem" class="text-center">Скоро здесь будет header</p>
+		</header>
+
