--- a/src/sass/libs.scss
+++ b/src/sass/libs.scss
@@ -1,2 +1,12 @@
 @import 'plug/variables';
-@import '../../node_modules/bootstrap-reboot/bootstrap-reboot.scss';
+@import 'plug/fonts';
+
+@import '../../node_modules/bootstrap/scss/functions';
+@import '../../node_modules/bootstrap/scss/variables';
+@import '../../node_modules/bootstrap/scss/mixins';
+
+// @import '../../node_modules/bootstrap/scss/utilities/spacing';
+@import '../../node_modules/bootstrap/scss/utilities/text';
+// @import '../../node_modules/bootstrap/scss/bootstrap-grid.scss';
+
+@import '../../node_modules/bootstrap/scss/bootstrap-reboot.scss';
