--- a/src/sass/plug/_variables.scss
+++ b/src/sass/plug/_variables.scss
@@ -1,22 +1,38 @@
 /* reboot vaiables*/
-
 $font-family-base          : 'Jura', sans-serif;
+$font-size-base            : 1rem;
+$font-weight-base          : normal;
+$line-height-base          : 1.5;
+
 $body-color                : black;
 $body-bg                   : white;
 
-$line-height-base          : 1.5;
-$font-size-base            : 1rem;
-$text-muted                : #dedede;
-$font-weight-base          : normal;
+$headings-margin-bottom    : 0;
 $paragraph-margin-bottom   : 0;
+$label-margin-bottom       : 0;
 
 $link-color                : black;
-$link-hover-color          : darken($link-color, 15%);
 $link-decoration           : none;
+$link-hover-color          : darken($link-color, 15%);
 $link-hover-decoration     : none;
-$enable-hover-media-query  : false;
-
-$dt-font-weight            : bold;
-$table-cell-padding        : .75rem;
-
 /* reboot vaiables end*/
+
+/* grid variables */
+$grid-breakpoints: (
+	xs: 0,
+	sm: 576px,
+	md: 768px,
+	lg: 992px,
+	xl: 1200px
+	);
+
+$container-max-widths: (
+	sm: 540px,
+	md: 720px,
+	lg: 960px,
+	xl: 1140px
+	);
+
+$grid-columns:                12 !default;
+$grid-gutter-width:           30px !default;
+/* grid variables end*/
