--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,3 +1,8 @@
+</div>
+<!-- content end -->
 <footer class="footer">
-	<p>footer</p>
+	<p style="font-size: 2rem" class="text-center">Скоро здесь будет footer</p>
 </footer>
+	
+</div>
+<!-- wrapper end -->
