--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,7 +1,7 @@
 </div>
 <!-- content end -->
 <footer class="footer">
-	<p style="font-size: 2rem" class="text-center">Скоро здесь будет footer</p>
+	<p class="example-responsive-text text-center">Скоро здесь будет footer</p>
 </footer>
 	
 </div>
