--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,6 +1,6 @@
 <div class="page-wrapper">
 	<div class="page-content">
 		<header class="header">
-			<p style="font-size: 2rem" class="text-center">Скоро здесь будет header</p>
+			<p class="example-responsive-text text-center">Скоро здесь будет header</p>
 		</header>
 
