--- a/src/sass/libs.scss
+++ b/src/sass/libs.scss
@@ -5,8 +5,8 @@
 @import '../../node_modules/bootstrap/scss/variables';
 @import '../../node_modules/bootstrap/scss/mixins';
 
-// @import '../../node_modules/bootstrap/scss/utilities/spacing';
+@import '../../node_modules/bootstrap/scss/utilities/spacing';
 @import '../../node_modules/bootstrap/scss/utilities/text';
-// @import '../../node_modules/bootstrap/scss/bootstrap-grid.scss';
+@import '../../node_modules/bootstrap/scss/bootstrap-grid.scss';
 
 @import '../../node_modules/bootstrap/scss/bootstrap-reboot.scss';
