--- a/src/sass/plug/_variables.scss
+++ b/src/sass/plug/_variables.scss
@@ -15,9 +15,9 @@ $link-color                : black;
 $link-decoration           : none;
 $link-hover-color          : darken($link-color, 15%);
 $link-hover-decoration     : none;
-/* reboot vaiables end*/
+/* Reboot vaiables end*/
 
-/* grid variables */
+/* Grid variables */
 $grid-breakpoints: (
 	xs: 0,
 	sm: 576px,
@@ -33,6 +33,33 @@ $container-max-widths: (
 	xl: 1140px
 	);
 
-$grid-columns:                12 !default;
-$grid-gutter-width:           30px !default;
-/* grid variables end*/
+$grid-columns:                12;
+$grid-gutter-width:           30px;
+/* Grid variables end*/
+
+/* Responsive font start */
+$rfs-minimum-font-size: 15px;
+$rfs-font-size-unit: rem;
+
+// breakpoint at where font-size starts decreasing if screen width is smaller
+$rfs-breakpoint: 1200px;
+$rfs-breakpoint-unit: px;
+
+// resize font-size based on screen height and width
+$rfs-two-dimensional: false;
+
+// factor of decrease
+$rfs-factor: 10;
+
+// generate enable or disable classes. Possibilities: false, "enable" or "disable"
+$rfs-class: false;
+
+// 1 rem = $rfs-rem-value px
+$rfs-rem-value: 16;
+
+// safari iframe resize bug: https://github.com/project-rfs/rfs/issues/14
+$rfs-safari-iframe-resize-bug-fix: false;
+
+// disable RFS by setting $enable-responsive-font-sizes to false
+$enable-responsive-font-sizes: true;
+/* Responsive font end */
