--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -7,7 +7,7 @@
 /* Global styles start*/
 html,
 body {
-	height: 100% !important;
+	height: 100%;
 }
 ul, ol, li {
 	margin: 0;
@@ -22,7 +22,7 @@ button {
 	padding: 0;
 	margin: 0;
 	background-color: transparent;
-	&[type="button"] {
+	&[type="button"], &[type="submit"] {
 		&:focus {
 			outline: none;
 		}
@@ -41,11 +41,14 @@ input, textarea {
 		outline: none;
 	}
 }
+textarea {
+	resize: none;
+}
 svg {
 	width: 100%;
 	stroke-width: 0;
 	stroke: currentColor;
-	fill: currentColor;
+	fill: inherit;
 	pointer-events: none;
 	transform: translate(0);
 	vertical-align: top;
