--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,8 +1,8 @@
 </div>
 <!-- content end -->
-<footer class="footer">
-	<p class="example-responsive-text text-center">Скоро здесь будет footer</p>
+<footer class="footer squeeze-footer">
+	<p class="example-responsive-text text-center">Soon here will be the footer of the site</p>
 </footer>
-	
+
 </div>
 <!-- wrapper end -->
