--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,6 +1,5 @@
-<div class="page-wrapper">
-	<div class="page-content">
+<div class="squeeze-wrapper">
+	<div class="squeeze-content">
 		<header class="header">
-			<p class="example-responsive-text text-center">Скоро здесь будет header</p>
+			<p class="example-responsive-text text-center">Soon here will be the header of the site</p>
 		</header>
-
