--- a/src/template/modal.html
+++ b/src/template/modal.html
@@ -11,11 +11,11 @@
 					</svg>
 				</button>
 			</header>
-			<main class="modal-content" id="modal-example-content">
+			<div class="modal-main">
 				<p>
 					Try hitting the <code>tab</code> key and notice how the focus stays within the modal itself. Also, <code>esc</code> to close modal.
 				</p>
-			</main>
+			</div>
 			<footer class="modal-footer">
 				<button type="button" data-modal-close>close</button>
 			</footer>
