--- a/src/sass/helpers/utilites/_fonts.scss
+++ b/src/sass/helpers/utilites/_fonts.scss
@@ -1,3 +1,3 @@
 @import 'mixins';
 
-@include font-face('Jura Regular', '../fonts/Jura/JuraRegular/JuraRegular');
+//@include font-face('Jura Regular', '../fonts/Jura/JuraRegular/JuraRegular');
