--- a/src/sass/helpers/utilites/_variables.scss
+++ b/src/sass/helpers/utilites/_variables.scss
@@ -4,7 +4,7 @@ $black:																			#000000;
 /* colors vaiables end*/
 
 /* reboot vaiables start*/
-$font-family-base: 													'Jura Regular', sans-serif;
+$font-family-base: 													-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", Arial, sans-serif;
 $font-size-base: 														1rem;
 $font-weight-base: 													normal;
 $line-height-base: 													1.35;
