--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -49,7 +49,8 @@ textarea {
 	resize: none;
 }
 svg {
-	width: 100%;
+	max-width: 100%;
+	max-height: 100%;
 	stroke-width: 0;
 	stroke: currentColor;
 	fill: currentColor;
