--- a/src/sass/helpers/utilites/_variables.scss
+++ b/src/sass/helpers/utilites/_variables.scss
@@ -3,11 +3,12 @@
 /* Colors variables start */
 
 $colors: (
-		success: #A4DE2F,
-		warning: #EE8732,
+		success:  #A4DE2F,
+		warning:  #EE8732,
+		info: 		#4b8bf5,
 
-		white: #ffffff,
-		black: #000000
+		white: 		#ffffff,
+		black: 		#000000
 );
 
 /* Colors variables end */
