--- a/src/html/layout/main.pug
+++ b/src/html/layout/main.pug
@@ -18,3 +18,5 @@ html(lang='ru')
 					main
 						block mainContent
 				include ../components/footer
+		script(src='js/vendors.js')
+		script(src='js/main.js')
