modified assistant helper-class

--- a/src/html/layout/main.pug
+++ b/src/html/layout/main.pug
@@ -15,7 +15,7 @@ html(lang='ru')
 			.page-wrapper
 				.page-content
 					include ../components/header
-					main
+					main#main
 						block mainContent
 				include ../components/footer
 		script(src='js/vendors.js')
