--- a/src/html/pages/index.pug
+++ b/src/html/pages/index.pug
@@ -9,10 +9,10 @@ block mainContent
 	include ../mixins/icon
 	include ../mixins/breadcrumbs
 
-	- const listClass = ['list'];
-	- const imageAttributes = {"src": "img/v8.png", "alt": "Alternative description", 'class': 'v8-image'};
+	- listClass = ['list'];
+	- imageAttributes = {"src": "img/v8.png", "alt": "Alternative description", 'class': 'v8-image'};
 	-
-		const listItems  = [
+		listItems  = [
 		'- HTML - processing using Pug.js',
 		'- Sass - Bootstrap 4 grid-generator, a set of useful mixins out of the box',
 		'- Javascript ES6 Modules - processing using Webpack 4',
